* Fix default template spacing issues.

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -31,15 +31,15 @@ body {
 }
 
 .pagination-bottom {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .pagination-top {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .select-filters {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .stream-item {
